# genai-legal-bot

./: README.md  app.py  pyproject.toml
agents/: query_agent.py  query_engine.py  summarizer_agent.py
assets/: LegalBot_Arch.excalidraw
data/: chunks.json  legal_index.faiss
saved_sessions/: session_20250520_181818.json
